spl/tests/compile_fail/missing_behavior_module.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nonexistent`
  --> tests/compile_fail/missing_behavior_module.rs:14:15
   |
14 |     #[account(nonexistent(value = 42u64))]
   |               ^^^^^^^^^^^ use of unresolved module or unlinked crate `nonexistent`
   |
   = help: if you wanted to use a crate named `nonexistent`, use `cargo add nonexistent` to add it to your `Cargo.toml`
help: consider importing one of these structs
   |
 2 + use std::env::Args;
   |
 2 + use quasar_spl::prelude::associated_token::Args;
   |
 2 + use quasar_spl::prelude::mint::Args;
   |
 2 + use quasar_spl::prelude::token::Args;
   |
   = and 2 other candidates

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nonexistent`
  --> tests/compile_fail/missing_behavior_module.rs:14:15
   |
14 |     #[account(nonexistent(value = 42u64))]
   |               ^^^^^^^^^^^ use of unresolved module or unlinked crate `nonexistent`
   |
   = help: if you wanted to use a crate named `nonexistent`, use `cargo add nonexistent` to add it to your `Cargo.toml`
